# volume_key

./: .gitignore  ChangeLog  Makefile.am  NEWS  README  configure.ac  zanata.xml
.tx/: config
admin/: .gitignore
contrib/: Makefile.am
contrib/email/: README  escrow-receive  escrow-transit
contrib/email/tests/: mailsrv.py  sendpkt.py  test-escrow-receive  test-escrow-transit  utest.sh
doc/: Makefile.am  demo.py  volume_key.8
lib/: Makefile.am  SECerrs.h  SSLerrs.h  crypto.c  crypto.h  kmip.c  kmip.h  libvolume_key.c  libvolume_key.h  nss_error.c  nss_error.h  ui.c  ui.h  volume.c  volume.h  volume_luks.c  volume_luks.h
m4/: .gitignore
po/: .gitignore  LINGUAS  Makevars  POTFILES.in  as.po  bg.po  bn.po  bn_IN.po  ca.po  cs.po  de.po  de_CH.po  en_GB.po  es.po  eu.po  fr.po  gu.po  hi.po  hu.po  id.po  it.po  ja.po  kn.po  ko.po  ml.po  mr.po  nb.po  nl.po  or.po  pa.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sq.po  sv.po  ta.po  te.po  tr.po  (+4 more)
python/: Makefile.am  volume_key.i
python/python/: Makefile.am
python/python3/: Makefile.am
src/: Makefile.am  volume_key.c
tests/: Makefile.am  crypto_roundtrips.c  crypto_roundtrips.sh  kmip_roundtrip.c  kmip_roundtrip_luks_passphrase  kmip_roundtrip_luks_symmetric  packet_roundtrips.c  packet_roundtrips.sh  packet_roundtrips_luks_passphrase
